# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "hitrace/hitrace"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$hitrace_common_path",
    "$hitrace_interfaces_path/native/innerkits/include",
    "$hitrace_frameworks_path/include",
    "$hitrace_interfaces_path/native/innerkits/include/hitrace_meter",
    "$hitrace_interfaces_path/native/innerkits/include/hitrace",
    "$hitrace_utils_path",
  ]
}

ohos_unittest("HitraceCTest") {
  module_out_path = module_output_path

  sources = [
    "$hitrace_frameworks_path/native/hitracechain.cpp",
    "$hitrace_frameworks_path/native/hitracechainc.c",
    "$hitrace_frameworks_path/native/hitraceid.cpp",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter.cpp",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter_c.c",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter_wrapper.cpp",
    "common/native/hitracechainc_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest_main",
    "init:libbegetutil",
  ]

  deps = [ "$hitrace_utils_path:hitrace_common_utils" ]

  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

ohos_unittest("HitraceCppTest") {
  module_out_path = module_output_path

  sources = [
    "$hitrace_frameworks_path/native/hitracechain.cpp",
    "$hitrace_frameworks_path/native/hitracechainc.c",
    "$hitrace_frameworks_path/native/hitraceid.cpp",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter.cpp",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter_c.c",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter_wrapper.cpp",
    "common/native/hitracechaincpp_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest_main",
    "init:libbegetutil",
  ]

  deps = [ "$hitrace_utils_path:hitrace_common_utils" ]

  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

config("HitraceMeterTest_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "hitrace_meter",
    "$hitrace_common_path",
    "$hitrace_interfaces_path/native/innerkits/include/hitrace_meter",
    "$hitrace_utils_path",
  ]
}

ohos_unittest("HitraceMeterTest") {
  module_out_path = module_output_path

  sources = [
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter.cpp",
    "hitrace_meter/hitrace_meter_test.cpp",
    "hitrace_meter/hitrace_meter_test_utils.cpp",
  ]

  configs = [ ":HitraceMeterTest_config" ]

  cflags = [ "-DHITRACE_UNITTEST" ]

  deps = [
    "$hitrace_interfaces_path/native/innerkits:hitrace_meter",
    "$hitrace_interfaces_path/native/innerkits:libhitracechain",
    "$hitrace_utils_path:hitrace_common_utils",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest_main",
    "init:libbegetutil",
  ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

config("HitraceMeterNDKTest_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "hitrace_meter",
    "$hitrace_common_path",
    "$hitrace_frameworks_path/include",
    "$hitrace_interfaces_path/native/innerkits/include",
    "$hitrace_interfaces_path/native/kits/include/hitrace",
    "$hitrace_utils_path",
  ]
}

ohos_unittest("HitraceMeterNDKTest") {
  module_out_path = module_output_path

  sources = [
    "$hitrace_frameworks_path/hitrace_ndk/hitrace_chain_ndk.c",
    "$hitrace_frameworks_path/hitrace_ndk/hitrace_meter_ndk.c",
    "hitrace_meter/hitrace_meter_ndk_test.cpp",
    "hitrace_meter/hitrace_meter_test_utils.cpp",
  ]

  configs = [ ":HitraceMeterNDKTest_config" ]

  cflags = [
    "-DHITRACE_UNITTEST",
    "-DHITRACE_METER_SDK_C",
  ]

  deps = [
    "$hitrace_interfaces_path/native/innerkits:hitrace_meter",
    "$hitrace_interfaces_path/native/innerkits:libhitracechain",
    "$hitrace_utils_path:hitrace_common_utils",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest_main",
    "init:libbegetutil",
  ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

ohos_unittest("HitraceDumpTest") {
  module_out_path = module_output_path

  sources = [
    "$hitrace_frameworks_path/native/dynamic_buffer.cpp",
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_dump.cpp",
    "hitrace_dump/hitrace_dump_test.cpp",
  ]

  cflags = [ "-DHITRACE_UNITTEST" ]

  include_dirs = [
    "$hitrace_common_path",
    "$hitrace_cmd_path/include",
    "$hitrace_frameworks_path/include",
    "$hitrace_interfaces_path/native/innerkits/include",
    "$hitrace_utils_path",
  ]

  deps = [
    "$hitrace_interfaces_path/native/innerkits:hitrace_meter",
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_file_utils",
    "$hitrace_utils_path:hitrace_json_parser",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson",
    "googletest:gtest_main",
    "init:libbegetutil",
  ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

ohos_unittest("HitraceUtilsTest") {
  module_out_path = module_output_path
  resource_config_file = "resource/ohos_test.xml"

  include_dirs = [
    "$hitrace_common_path",
    "$hitrace_utils_path",
  ]

  sources = [ "hitrace_utils/hitrace_utils_test.cpp" ]

  deps = [
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_file_utils",
    "$hitrace_utils_path:hitrace_json_parser",
  ]

  external_deps = [ "googletest:gtest_main" ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

ohos_unittest("HitraceEventTest") {
  module_out_path = module_output_path

  include_dirs = [
    "$hitrace_common_path",
    "$hitrace_utils_path",
  ]

  sources = [
    "hitrace_event/hitrace_event_listener.cpp",
    "hitrace_event/hitrace_event_test.cpp",
  ]

  cflags = [ "-DHITRACE_UNITTEST" ]

  deps = [
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_file_utils",
  ]

  external_deps = [
    "googletest:gtest_main",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
  ]
}

config("HitraceMeterFfiTest_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "hitrace_meter",
    "$hitrace_common_path",
    "$hitrace_interfaces_path/cj/kits/ffi/include",
    "$hitrace_interfaces_path/native/innerkits/include/hitrace_meter",
    "$hitrace_utils_path",
  ]
}

ohos_unittest("HitraceMeterFfiTest") {
  module_out_path = module_output_path

  sources = [
    "$hitrace_interfaces_path/native/innerkits/src/hitrace_meter.cpp",
    "hitrace_meter/hitrace_meter_ffi_test.cpp",
    "hitrace_meter/hitrace_meter_test_utils.cpp",
  ]

  configs = [ ":HitraceMeterFfiTest_config" ]

  cflags = [ "-DHITRACE_UNITTEST" ]

  deps = [
    "$hitrace_interfaces_path/cj/kits/ffi:cj_hitracechain_ffi",
    "$hitrace_interfaces_path/cj/kits/ffi:cj_hitracemeter_ffi",
    "$hitrace_interfaces_path/native/innerkits:hitrace_meter",
    "$hitrace_interfaces_path/native/innerkits:libhitracechain",
    "$hitrace_utils_path:hitrace_common_utils",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest_main",
    "init:libbegetutil",
    "napi:cj_bind_ffi",
  ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

ohos_unittest("HitraceSourceTest") {
  module_out_path = module_output_path

  include_dirs = [
    "$hitrace_common_path",
    "$hitrace_frameworks_path/trace_source",
    "$hitrace_interfaces_path/native/innerkits/include",
    "$hitrace_utils_path",
  ]

  sources = [ "trace_source/hitrace_source_test.cpp" ]

  deps = [
    "$hitrace_frameworks_path/trace_source:trace_source",
    "$hitrace_interfaces_path/native/innerkits:hitrace_dump",
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_json_parser",
  ]

  external_deps = [ "googletest:gtest_main" ]
}

ohos_unittest("HitraceDumpExecutorTest") {
  module_out_path = module_output_path

  cflags = [ "-DHITRACE_UNITTEST" ]

  include_dirs = [
    "$hitrace_common_path",
    "$hitrace_frameworks_path/trace_dump_executor",
    "$hitrace_frameworks_path/trace_source",
    "$hitrace_interfaces_path/native/innerkits/include",
    "$hitrace_utils_path",
  ]

  sources = [
    "$hitrace_frameworks_path/trace_dump_executor/trace_dump_executor.cpp",
    "trace_dump_executor/trace_dump_executor_test.cpp",
  ]

  deps = [
    "$hitrace_frameworks_path/trace_source:trace_source",
    "$hitrace_interfaces_path/native/innerkits:hitrace_dump",
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_file_utils",
  ]

  external_deps = [ "googletest:gtest_main" ]

  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}
